# kuBig2026

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.agents/skills/: paperclip  paperclip-create-agent  paperclip-create-plugin  para-memory-files
PyWebView/: README.md  pyproject.toml  수업자료_웹뷰_단계별_실습.md
PyWebView/app/: main.py
PyWebView/bridge_file_list/: main.py
PyWebView/click/: main.py
PyWebView/doc/: 01_수업자료_웹뷰_단계별_실습.md  02_click_단계별_실습.md  02_배경지식_공식문서_링크.md  03_API브리지_파일목록_단계별_실습.md  03_click_단계별_실습.md  04_메모장_파일읽기쓰기_단계별_실습.md  05_사용자설정_JSON저장_단계별_실습.md  06_입력검증_점수입력_단계별_실습.md  07_Todo_CRUD_단계별_실습.md  08_Todo_SQLite_단계별_실습.md  09_긴작업_진행률_단계별_실습.md  10_창제어_단계별_실습.md  11_화면전환_단계별_실습.md  12_앱패키징_단계별_실습.md  99_배경지식_공식문서_링크.md  README.md
PyWebView/long_task_progress/: main.py
PyWebView/memo_file_io/: main.py
PyWebView/native_extension/: README.md
PyWebView/packaging_demo/: main.py
PyWebView/screen_router/: main.py
PyWebView/settings_store/: main.py
PyWebView/timer/: main.py
PyWebView/todo_crud/: main.py
PyWebView/todo_sqlite/: main.py
PyWebView/validation_scores/: main.py
PyWebView/window_control_demo/: main.py
atmega128/: CMakeLists.txt  README.md  실습지.md
atmega128/src/: cds.c  cds2.c  dc_motor.c  dc_pwm.c  dc_pwm_vr.c  external_eeprom.c  external_eeprom2.c  fnd1.c  fnd2.c  i2c_tempHumi.c  interrupt_fnd.c  lcd1.c  led2.c  led3.c  led4.c  main.c  pwmServoSwitch.c  pwmbuzzer.c  pwmled.c  pwmservo.c  switch1.c  switch2.c  switch_fnd.c  timer0led.c  timer1com.c  timer2ledleftright.c  uart1.c  uart2.c  uart3.c
bowling/: CMakeLists.txt  README.md  board.c  board.h  main.c  볼링 규칙.md  실습지.md
c_example/: README.md  bigLetter.c  celsius2Fahr  celsius2Fahr.c  charNumber.c  compare.c  fahr2Celcius  fahr2Celcius.c  fourbit  fourbit.c  fourbit2  hello  hello.c  increment  increment.c  limit  limit.c  literal  makefile  oddEven  oddEven.c  stringCopy  stringCopy.c
c_example/part1/: alphabet.c  fahr2Celcius.c  fourbit2.c  genderRatio.c  makefile_temp2
c_example/part2/: A2Z.c  a2bSum.c  absoluteValue  absoluteValue.c  arrayInit.c  dice.c  dice2.c  findMax.c  lotto.c  multiply.c  one2TenSum.c  one2TenSumWhile.c  one2TenWhile.c  oneToTenFor.c  passFail  passFail.c  passFail2  passFail2.c  posZeroNeg.c  scoreGrade.c  scoreGradeSwitch  scoreGradeSwitch.c  star.c  star2.c  sumArray.c  xstar.c
c_example/part3/: CMakeLists.txt  arrayAssignment.c  pointer1.c  pointer2.c  pointer3.c  pointer4_doublepointer.c  pointer5_functionpointer.c  qsort  qsort.c  selectionSorting.c  swap.c
c_example/part5/: README.md  charGetPut.c  charGetPut2.c  charGetPut3.c  charGetPut4.c  enumExample.c  selfReference.c  string3.c  stringExample  stringExample.c  struct.c  struct2.c  struct3_twoDouble  struct3_twoDouble.c  struct4_twoDouble  struct4_twoDouble.c  structArray.c  unionExample.c  실습지.md
c_example/part6/: README.md  dynamicAllocation2  dynamicAllocation2.c  dynamicAllocation3.c  fileDescriptor.c  filePointer.c  variableLengthArray.c  실습지.md
doc/: 1주차_수업운영안.md  2nd_project.md  2주차_수업운영안.md  C_실습_맵.md  GitHub_제출_예시.md  [sample]빅데이터 IoT 소프트웨어 개발자_형성평가 시행용.hwp  atmega128.md  c_programming.md  cmake사용법.md  cpp_programming.md  mysql.md  opencv.md  opencv_4_10_cuda_설치_가이드.md  python_programming.md  raw_2nd_project.md  강사용_수업준비_체크리스트.md  문제해결_가이드.md  발표_구성_템플릿.md  실습_제출_템플릿.md  실습지_모음.md  온보딩_체크리스트.md  첫 프로젝트.md  표준 입출력 함수 정리.md  프로젝트_마일스톤_체크리스트.md  프로젝트_제안서_템플릿.md  프로젝트_평가_루브릭.md  학습_자가진단표.md
doc/Project/: 1차_1조_프로젝트 계획서_예시.hwp  1차_1조_프로젝트_기술서_예시.hwp
doc/python_doc/: day1_cpython_object_model.pptx  day1_project_environment_management.pptx  day1_python_function_arguments.pptx  day2_uv_packaging_cicd.pptx  day3_native_binding_extension.pptx  day3_python_metaprogramming.pptx  day4_pywebview_click_counter.pptx  day4_pywebview_timer_gui.pptx
ds/: README.md  실습지.md
ds/list/: list1  list1.c
ds/stack/: queue1  queue1.c  stack1.c
network/: CMakeLists.txt  README.md  mqttPub  mqttPub.c  mqtttPub.c  실습지.md
opencv_ex/: CMakeLists.txt
opencv_ex/data/: mydata.xml  mydata.yml
opencv_ex/part1/: 01_helloWorld.cpp  02_basicOp.cpp  03_matOp.cpp  04_inputArray.cpp  05_matOp2.cpp  06_video.cpp  07_gstreamer.cpp  08_gstreamer_ex.cpp
opencv_ex/part2/: 09_videoSave.cpp  10_drawing.cpp  12_drawing_example2.cpp  13_font.cpp  14_freetype.cpp  15_keyboard.cpp  16_tickmeter.cpp  17_mouse.cpp  18_mouse_example.cpp  19_trackbar.cpp  20_filestorage.cpp  21_filestorage2.cpp  22_mask.cpp  CMakeLists.txt  colors.hpp
opencv_ex/part3/: 23_brightness.cpp  24_contrast.cpp  25_histogram.cpp  26_arithmetic.cpp  27_embossing.cpp  28_blurr.cpp  29_sharpening.cpp  CMakeLists.txt
opencv_ex/part4/: 31_affine.cpp  32_perspective.cpp  33_perspective_ex.cpp  34_perspective_ex2.cpp  35_sobel.cpp  36_canny.cpp  37_hougline.cpp  38_houglineP.cpp  39_color_split.cpp  40_inrange.cpp  41_inrange.cpp  42_threshold.cpp  43_morpholgy.cpp  44_labeling.cpp  45_polygon.cpp  46_page_postit.cpp  CMakeLists.txt
opencv_ex/part5/: 47_cascade.cpp  48_cascade_ex.cpp  49_hog.cpp  50_qr.cpp  51_corners.cpp  52_orb.cpp  53_matching.cpp  CMakeLists.txt
opencv_ex/part6/: 54_knnplane.cpp  55_knndigit.cpp  56_handpose.cpp  57_handpose.py  57_handpose_mp.py  CMakeLists.txt
paperclip_log/: 2026-04-03-education-material-review.md  2026-04-03-education-trend-reference-pack.md  2026-04-04-paperclip-model-change-retrospective.md  2026-04-04-technical-review.md  교육 운영 프레임워크.md
pico/: CMakeLists.txt
pico/src/: main.c
pico/src/mqtt/: mqtt_client.c
python_example/: pywebview_example.py  requirments.txt
python_example/basic/: a.out  a02_keyward.py  a04_print.py  a08_str_indexing.py  a100_request.py  a101_json_serialization.py  a101_wrapper_function.py  a102_decorator.py  a102_yaml_serialization.py  a103_main_argument.py  a103_time_decorator.py  a104_multithreading.py  a106_asyncio_http.py  (+43 more)
python_example/uv_test/: pyproject.toml  uv_install.md
python_example/uv_test/test_package/: __init__.py  module_a.py  module_b.py
tools/: README.md  paperclip.sh  patch_paperclip_dropdown.js  review_course_assets.sh  test.sh
(+283 files in other folders)
