cmake_minimum_required(VERSION 3.10)
project(kuBig2026)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(c_example/part3)
add_subdirectory(c_example/part4/carSerial)
add_subdirectory(c_example/part4/myRandom)
add_subdirectory(c_example/part4/baseballGame)
add_subdirectory(c_example/part5/date)
add_subdirectory(c_example/part5/twoDouble)
add_subdirectory(c_example/part6/scoreProcess)
add_subdirectory(ds/stack/myStack1)
add_subdirectory(ds/stack/myStack2)
add_subdirectory(ds/stack/myStack3)
add_subdirectory(ds/queue/myQueue1)
add_subdirectory(ds/queue/myQueue2)
add_subdirectory(network)