# git submodule add https://github.com/raspberrypi/pico-sdk.git deps/pico-sdk

cmake_minimum_required(VERSION 3.13)

if (NOT PICO_SDK_PATH AND NOT DEFINED ENV{PICO_SDK_PATH})
set(PICO_SDK_PATH "${CMAKE_CURRENT_LIST_DIR}/deps/pico-sdk" CACHE PATH "Path to the Raspberry Pi Pico SDK")
endif()

set(PICO_BOARD pico2_w CACHE STRING "Board type")

include(pico_sdk_import.cmake)
project(my_project C CXX ASM)

pico_sdk_init()

set(WIFI_SSID "bindsoft" CACHE STRING "Wi-Fi SSID for Pico W examples")
set(WIFI_PASSWORD "bindsoft24" CACHE STRING "Wi-Fi password for Pico W examples")

if (DEFINED ENV{MQTT_SERVER} AND (NOT MQTT_SERVER))
    set(MQTT_SERVER $ENV{MQTT_SERVER})
    message("Using MQTT_SERVER from environment ('${MQTT_SERVER}')")
endif()
if (NOT MQTT_SERVER)
    set(MQTT_SERVER "163.152.213.101" CACHE STRING "MQTT broker host for Pico W examples")
endif()
set(MQTT_SERVER "${MQTT_SERVER}" CACHE STRING "MQTT broker host for Pico W examples" FORCE)

if (DEFINED ENV{MQTT_USERNAME} AND (NOT MQTT_USERNAME))
    set(MQTT_USERNAME $ENV{MQTT_USERNAME})
    message("Using MQTT_USERNAME from environment ('${MQTT_USERNAME}')")
endif()
set(MQTT_USERNAME "${MQTT_USERNAME}" CACHE INTERNAL "MQTT user name for examples")

if (DEFINED ENV{MQTT_PASSWORD} AND (NOT MQTT_PASSWORD))
    set(MQTT_PASSWORD $ENV{MQTT_PASSWORD})
    message("Using MQTT_PASSWORD from environment")
endif()
set(MQTT_PASSWORD "${MQTT_PASSWORD}" CACHE INTERNAL "MQTT password for examples")

if (NOT MQTT_CERT_PATH)
    set(MQTT_CERT_PATH ${CMAKE_CURRENT_LIST_DIR}/src/mqtt/certs/${MQTT_SERVER})
endif()

if (NOT MQTT_CERT_INC)
    set(MQTT_CERT_INC mqtt_client.inc)
endif()

add_executable(hello_pico src/main.c)
add_executable(blink
    src/blink.c
    )
add_executable(picow_mqtt_client
    src/mqtt/mqtt_client.c
    )

# 표준 라이브러리 연결
target_link_libraries(hello_pico pico_stdlib)
target_link_libraries(blink pico_stdlib)
target_link_libraries(picow_mqtt_client
    pico_stdlib
    hardware_adc
    pico_cyw43_arch_lwip_threadsafe_background
    pico_lwip_mqtt
    pico_mbedtls
    pico_lwip_mbedtls
    )

target_include_directories(picow_mqtt_client PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}/src/mqtt
    ${CMAKE_CURRENT_LIST_DIR}/src
    )

target_compile_definitions(picow_mqtt_client PRIVATE
    WIFI_SSID=\"${WIFI_SSID}\"
    WIFI_PASSWORD=\"${WIFI_PASSWORD}\"
    MQTT_SERVER=\"${MQTT_SERVER}\"
    PICO_STDIO_USB_CONNECT_WAIT_TIMEOUT_MS=3000
    PICO_STDIO_USB_POST_CONNECT_WAIT_DELAY_MS=200
    )

if (EXISTS "${MQTT_CERT_PATH}/${MQTT_CERT_INC}")
    target_compile_definitions(picow_mqtt_client PRIVATE
        MQTT_CERT_INC=\"${MQTT_CERT_INC}\"
        ALTCP_MBEDTLS_AUTHMODE=MBEDTLS_SSL_VERIFY_REQUIRED
        )
    target_include_directories(picow_mqtt_client PRIVATE
        ${MQTT_CERT_PATH}
        )
endif()

if (MQTT_USERNAME AND MQTT_PASSWORD)
    target_compile_definitions(picow_mqtt_client PRIVATE
        MQTT_USERNAME=\"${MQTT_USERNAME}\"
        MQTT_PASSWORD=\"${MQTT_PASSWORD}\"
    )
endif()

if (PICO_CYW43_SUPPORTED)
    target_link_libraries(blink pico_cyw43_arch_none)
endif()


pico_enable_stdio_usb(picow_mqtt_client 1)
pico_enable_stdio_uart(picow_mqtt_client 1)

pico_add_extra_outputs(hello_pico)
pico_add_extra_outputs(blink)
pico_add_extra_outputs(picow_mqtt_client)

set_source_files_properties(
    ${PICO_LWIP_PATH}/src/apps/altcp_tls/altcp_tls_mbedtls.c
    PROPERTIES
    COMPILE_OPTIONS "-Wno-unused-result"
    )

# USB 출력을 활성화하려면 아래 주석 해제 (Serial 모니터용)
pico_enable_stdio_usb(hello_pico 1)
pico_enable_stdio_uart(hello_pico 0)
